REL-102266 Align CSS across all steps Fix input text and number size

--- a/Source/kCura.IntegrationPoints.Web/Content/Site.css
+++ b/Source/kCura.IntegrationPoints.Web/Content/Site.css
@@ -331,7 +331,7 @@ ul li .day-select
 
 .integrationName
 {
-	width: 450px;
+	width: 450px !important;
 	height: 26px;
 }
 
